--- a/views/layout/footer.hbs
+++ b/views/layout/footer.hbs
@@ -3,9 +3,9 @@
     <div class="w-64 flex-shrink-0 md:mx-0 mx-auto text-center md:text-left md:mt-0 mt-10">
       <a class="flex title-font font-medium items-center md:justify-start justify-center text-gray-900">
         <img src="https://static.vecteezy.com/system/resources/previews/000/397/015/original/modern-company-logo-design-vector.jpg" width="40px" alt="">
-        <span class="ml-3 text-xl">My Store</span>
+        <span class="ml-3 text-xl">My Shop</span>
       </a>
-      <p class="mt-2 text-sm text-gray-500">Welcome to My Store</p>
+      <p class="mt-2 text-sm text-gray-500">Welcome to My Shop</p>
     </div>
     <div class="flex-grow flex flex-wrap md:pr-20 -mb-10 md:text-left text-center order-first">
       <div class="lg:w-1/4 md:w-1/2 w-full px-4">
