--- a/views/index.hbs
+++ b/views/index.hbs
@@ -199,7 +199,7 @@
 
     <div class="jumbotron jumbotron-fluid rounded bg-white border-0 shadow-sm border-left px-4">
       <div class="container">
-        <h1 class="display-4 mb-2 text-primary">My Store</h1>
+        <h1 class="display-4 mb-2 text-primary">My Shop</h1>
         <p class="lead text-muted"> Admin Dashboard</p>
 		<a href="/logout"><button class="btn1">LogOut Admin</button></a>
       </div>
