--- a/views/products.hbs
+++ b/views/products.hbs
@@ -124,7 +124,7 @@
   <div class="container mx-auto flex flex-wrap p-5 flex-col md:flex-row items-center">
     <a class="flex title-font font-medium items-center text-gray-900 mb-4 md:mb-0">
       <img src="https://static.vecteezy.com/system/resources/previews/000/397/015/original/modern-company-logo-design-vector.jpg" width="40px" alt="">
-      <span class="ml-3 text-xl">My Store</span>
+      <span class="ml-3 text-xl">My Shop</span>
     </a>
     <nav class="md:ml-auto flex flex-wrap items-center text-base justify-space-around">
      <button class="btn2"> <a href="/" class="mr-10 hover:text-gray-900">Home</a></button>
