forgot password feature added

--- a/views/login.hbs
+++ b/views/login.hbs
@@ -200,6 +200,7 @@ body {
       <span></span>
       Submit
     </a></button>
+    <a href="/forgotpassword" "fp" style="font-size:x-small;">forgot password?</a>
   </form>
 </div>
     
