--- a/views/resetpassword.hbs
+++ b/views/resetpassword.hbs
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Forgot Password</title>
+    <title>Reset Password</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -14,28 +14,35 @@
             justify-content: center;
             align-items: center;
             height: 100vh;
-            background-color: rgba(38, 38, 131, 0.459);
-             background: url('https://www.digitalinfoways.com/wp-content/uploads/2020/12/Ecommerce-Website-Design-Main-Banner.jpg');
+            background: url('https://www.digitalinfoways.com/wp-content/uploads/2020/12/Ecommerce-Website-Design-Main-Banner.jpg');
         }
-        
-        form {
-            background-color: #ffffff;
+
+        .container {
+            background-color: #fff;
             padding: 20px;
             border-radius: 8px;
             box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
-        }
-        
-        {{!-- h1 {
             text-align: center;
+        }
+
+        h1 {
             margin-bottom: 20px;
+            color: #333;
         }
-         --}}
+
+        form {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+        }
+
         label {
-            display: block;
             margin-bottom: 10px;
+            font-weight: bold;
+            color: #555;
         }
-        
-        input[type="email"] {
+
+        input[type="password"] {
             width: 100%;
             padding: 10px;
             margin-bottom: 20px;
@@ -43,7 +50,7 @@
             border-radius: 4px;
             box-sizing: border-box;
         }
-        
+
         button[type="submit"] {
             background-color: #007bff;
             color: #fff;
@@ -54,20 +61,24 @@
             font-size: 16px;
             transition: background-color 0.3s;
         }
-        
+
         button[type="submit"]:hover {
             background-color: #0056b3;
         }
-       
     </style>
 </head>
 <body>
-    <form method="post" action="/forgotpassword">
- <h1>Enter You Email</h1>
-        <label for="email">Email:</label>
-        <input type="email" name="email" id="email" required>
-        <br>
-        <button type="submit">Submit</button>
-    </form>
+    <div class="container">
+        <h1>Reset Password for {{email}}</h1>
+        <form method="post">
+            <label for="password">Password:</label>
+            <input type="password" name="password" id="password" required>
+            <br>
+            <label for="password2">Confirm Password:</label>
+            <input type="password" name="password2" id="password2" required>
+            <br>
+            <button type="submit">Reset Password</button>
+        </form>
+    </div>
 </body>
 </html>
