--- a/views/Home.hbs
+++ b/views/Home.hbs
@@ -279,7 +279,7 @@ button {
       {{#if admin}}
       <a href="/index" class="mr-5 hover:text-gray-900">Dashboard</a>
       {{else}}
-      <a class="mr-5 hover:text-gray-900">About</a>
+      <a href="/signup" class="mr-5 hover:text-gray-900">SignUp</a>
         {{/if}}
     </nav>
     <button class="inline-flex items-center bg-gray-100 border-0 py-1 px-3 focus:outline-none hover:bg-gray-200 rounded text-base mt-4 md:mt-0">
