--- a/views/index.hbs
+++ b/views/index.hbs
@@ -124,7 +124,13 @@
         <a href="#" class="list-group-item list-group-item-action border-0 pl-5">Purchases</a>
       </div>
     </div>
-	 
+	 <button class="list-group-item list-group-item-action border-0 d-flex justify-content-between align-items-center" data-toggle="collapse" data-target="#purchase-collapse">
+      <div>
+        <span class="bi bi-cart-plus"></span>
+        <a href="/addproduct"><span class="ml-2">Add Products</span></a>
+      </div>
+      <span class="bi bi-chevron-down small"></span>
+    </button>
   </div>
 </div>
 
