--- a/views/Home.hbs
+++ b/views/Home.hbs
@@ -283,11 +283,16 @@ button {
         {{/if}}
     </nav>
     <button class="inline-flex items-center bg-gray-100 border-0 py-1 px-3 focus:outline-none hover:bg-gray-200 rounded text-base mt-4 md:mt-0">
-      {{#if admin}}
-          <a href="/logout">Logout</a>
-      {{else}}
-           <a href="/login">Login</a>
-      {{/if}}
+    <nav>
+    {{#if admin}}
+        <a href="/logout">Logout Admin</a>
+    {{else if user}}
+        <a href="/logout">Logout User</a>
+    {{else}}
+        <a href="/login">Login</a>
+    {{/if}}
+</nav>
+
 
       <svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-4 h-4 ml-1" viewBox="0 0 24 24">
         <path d="M5 12h14M12 5l7 7-7 7"></path>
